--- a/TownPass-Service/frontend/src/App.css
+++ b/TownPass-Service/frontend/src/App.css
@@ -1,8 +1,17 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0.5rem;
   text-align: center;
+}
+
+.custom-card {
+  max-width: 24rem;
+  margin-bottom: 0.75rem;
+  margin-top: 0.25rem;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .logo {
