Fix-1 fix type and ui

--- a/TownPass-Service/frontend/src/index.css
+++ b/TownPass-Service/frontend/src/index.css
@@ -133,3 +133,9 @@ button:focus-visible {
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .button-class {
+    @apply text-white border-[#5ab4c5] bg-[#5ab4c5] py-2 px-3;
+  }
+}
